refs 135 : -quality- improving cdi jaxrs extension looking for interfaces that have RS annotations